strips extraneous content out of 00-intro.md; adds gcc_seal.png for logo; removes unused myst extensions from _config.yaml

--- a/Python/_config.yml
+++ b/Python/_config.yml
@@ -7,19 +7,15 @@ logo: gcc_seal.png
 
 parse:
   myst_enable_extensions:
-    # don't forget to list any other extensions you want enabled,
-    # including those that are enabled by default!
     - amsmath
     - colon_fence
-    - deflist
+    # - deflist
     - dollarmath
-    - fieldlist
-    - html_admonition
-    - html_image
+    # - html_admonition
+    # - html_image
     - linkify
-    - replacements
-    - smartquotes
-    - strikethrough
+    # - replacements
+    # - smartquotes
     - substitution
     - tasklist
 
