comments out logo in _config.yml until someone fixes jupyter-books bug

--- a/Python/_config.yml
+++ b/Python/_config.yml
@@ -3,7 +3,7 @@
 
 title: "MATH 263: Numerical differential equations"
 author: Ethan Smith
-logo: gcc_seal.png
+#logo: gcc_seal.png
 
 parse:
   myst_enable_extensions:
