--- a/Python/_config.yml
+++ b/Python/_config.yml
@@ -19,10 +19,10 @@ parse:
     - substitution
     - tasklist
 
-# For prf:theorem and prf:proof directives; not yet a jupyter-book default
 sphinx:
   extra_extensions:
-    - sphinx_proof
+    - sphinx_proof # enables prf:theorem and prf:proof directives
+    #- sphinxcontrib.tikz # supposed to enable tikz directive
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
