removes NB files from tracking; simplifies remaining directory structure

--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,8 @@ dependencies:
   - notebook
   - jupyterlab-myst
   - jupyter-book
+  - ghp-import
   - pip
   - pip:
       - sphinx-proof
-#prefix: /opt/anaconda3/envs/math263
+prefix: /opt/anaconda3/envs/math263
