caches outputs and increases timeout in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,9 @@ sphinx:
     - sphinx_proof # enables prf:theorem and prf:proof directives
     #- sphinxcontrib.tikz # supposed to enable tikz directive
 
-# Force re-execution of notebooks on each build.
-# See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache # cache notebook results to save time rebuilding
+  timeout: 600
 
 # Define the name of the latex output file for PDF builds
 latex:
