updates 00-intro.md with notes about evolution of course notes and encouragement for students to report issues

--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ parse:
     - colon_fence
     # - deflist
     - dollarmath
-    # - html_admonition
-    # - html_image
+    - html_admonition
+    - html_image
     - linkify
     # - replacements
-    # - smartquotes
+    - smartquotes
     - substitution
     - tasklist
 
