clean ups a few typos in lectures 05 and 06; adds lecture 06 to the Jupyter Book TOC

--- a/_toc.yml
+++ b/_toc.yml
@@ -9,3 +9,4 @@ chapters:
 - file: 03-error_analysis
 - file: 04-runge-kutta_methods
 - file: 05-multistep_methods
+- file: 06-predictor-corrector_methods
