correct copyright date; fixes mistake in backward Euler implementation

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 
 title: "MATH 263: Numerical differential equations"
 author: Ethan Smith
+copyright: "2025"
 logo: gcc_seal.png
 only_build_toc_files: true
 
